# sonicpulse-app

./: .gitignore  App.tsx  Converting Music Visualizer to Tauri App.md  README.md  README2.md  backend-server.cjs  bilibili-config.json  bilibili_poll_test.cjs  bilibili_test.cjs  build_log.txt  fix.cjs  fix_musicfree.js  fix_structure.cjs  generate_test_audio.cjs  index.html  index.tsx  jukebox.html  metadata.json  navi_lyric.json  netease-server.cjs  package-lock.json  package.json  plugin-server.cjs  random.json  static_routes.cjs  test-bilibili.cjs  test.html  test_bili_search.cjs  test_playurl.cjs  test_playurl2.cjs  test_playurl_fnval0.cjs  translations.ts  types.ts  vite.config.ts
backend/: server.cjs
backend/api/: bilibili.cjs  (+3 more)
components/: Controls.tsx  LogViewer.tsx  LyricLine.tsx  LyricsOverlay.tsx  ParticleOverlay.tsx  Player.tsx  Visualizer.tsx
dist-server/: 20.index.cjs.js  package-lock.json  package.json
locales/: en.json  ja.json  zh-CN.json  zh-TW.json
musicfree-plugin/: 1DuveNq2qht6uqel1x9Eg.js
providers/: BilibiliProvider.ts  I18nProvider.tsx  LocalProvider.ts  MusicFreeProvider.ts  MusicProvider.ts  NavidromeProvider.ts  NeteaseProvider.ts
src/: App.tsx  index.tsx  jukebox.html  translations.ts  translations.txt
src-tauri/: .taurignore  2  Cargo.toml  tauri.conf.json
src-tauri/backend-dist/: package-lock.json  package.json
src-tauri/capabilities/: default.json  http.json
src-tauri/icons/: icon.icns
src-tauri/log/: lastlog.txt
src-tauri/src/: audio.rs  lib.rs
utils/: Logger.ts  audioMetrics.ts  beatDetector.ts  lyricsParser.ts
(+67 files in other folders)
