[package]
name = "app"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
lofty = "0.22.2"
walkdir = "2.5.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-http = "2.5.9"
reqwest = "0.13.3"
tauri-plugin-fs = "2"
chrono = "0.4.45"
tauri-plugin-shell = "2.3.5"
